2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-03-09  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver-lp-api-wrapper.c (lp_solve_set_constr_rhs): fixed the
	value type.

	* lpkit.c (str_set_obj_fn): removed.
	(str_add_constraint): removed.
	(del_constraint): removed.
	(str_add_column): removed.
	(del_column): removed.
	(write_LP): removed.
	(print_duals): removed.
	(str_add_lag_con): removed.
	(add_column): removed.
	(get_column): removed.
	(print_scales): removed.

2002-03-07  Morten Welinder  <terra@diku.dk>

	* lpkit.h (_lprec): Change must_be_int, ch_sign, lower, and basis
	to char *.  Change scalar truth value fields to gboolean.

	* lpkit.c: Use strtognum, not strtod.

	* solve.c (milpsolve): Fix warning.

	* lp-solve-debug.c (lp_solve_debug_print): Constify.

	* lpkit.c (add_lag_con): Fix warning.

2002-03-04 Jukka-Pekka Iivonen <jiivonen@hutcs.cs.hut.fi>

	* Initial import of the lp-solve-3.2 package.  Lot's of changes
	related to Glib and GNOME coding style.

2002-03-04 Original ChangeLog of the lp-solve 3.2
	
	Changed after first review for comp.sources.reviewed:

	- Bug with row singletons and assignment fixed.
	- Makefile fixed.
	- Formatted man page (lp_solve.man) added + target to generate it
	  in the Makefile
	- install signal handler after reading the input to avoid dumping core
	- changed names of some examples to make them uniform
	- added correct results for all examples

	Changes since the comp.sources.reviewed release:

	- added more input sanity checking
	- removed a bug in the Branch-and-Bound code which could cause
	  umlimited recursion and finally a core dump
	- removed the duplicate declaration of global variable Rows
	- replaced bcopy by the ANSI standard memcopy
	- various small cosmetic changes

	Changes for version 1.1

	- added KNOWN_BUGS file.
	- accept x <= 0 as a sane bound.

	Changes for version 1.2

	- added (unsupported by me) VMS_SUPPORT file