@@ -364,116 +364,6 @@ set_mat (lprec *lp, int Row, int Column, gnum_float Value)
 	}
 }
 
-void
-lp_solve_add_constraint (lprec *lp, gnum_float *row,
-			 SolverConstraintType constr_type,
-			 gnum_float rh)
-{
-        matrec *newmat;
-	int  i, j;
-	int  elmnr;
-	int  stcol;
-	int  *addtoo;
-
-	addtoo = g_new (int, lp->columns + 1);
-
-	for (i = 1; i <= lp->columns; i++)
-	        if (row[i] != 0) {
-		        addtoo[i] = TRUE;
-			lp->non_zeros++;
-		}
-		else
-		        addtoo[i] = FALSE;
-
-	newmat = g_new (matrec, lp->non_zeros);
-	inc_mat_space (lp, 0);
-	lp->rows++;
-	lp->sum++;
-	inc_row_space (lp);
-
-	if (lp->scaling_used) {
-	        /* shift scale */
-	        for (i = lp->sum; i > lp->rows; i--)
-		        lp->scale[i] = lp->scale[i - 1];
-		lp->scale[lp->rows] = 1;
-	}
-
-	if (lp->names_used)
-	        sprintf (lp->row_name[lp->rows], "r_%d", lp->rows);
-
-	if (lp->scaling_used && lp->columns_scaled)
-		for (i = 1; i <= lp->columns; i++)
-			row[i] *= lp->scale[lp->rows + i];
-     
-	if (constr_type == SolverGE)
-		lp->ch_sign[lp->rows] = TRUE;
-	else
-		lp->ch_sign[lp->rows] = FALSE;
-
-	elmnr = 0;
-	stcol = 0;
-	for (i = 1; i <= lp->columns; i++) {
-		for (j = stcol; j < lp->col_end[i]; j++) {  
-			newmat[elmnr].row_nr = lp->mat[j].row_nr;
-			newmat[elmnr].value = lp->mat[j].value;
-			elmnr++;
-		}
-		if (addtoo[i]) {
-			if (lp->ch_sign[lp->rows])
-				newmat[elmnr].value = -row[i];
-			else
-				newmat[elmnr].value = row[i];
-			newmat[elmnr].row_nr = lp->rows;
-			elmnr++;
-		}
-		stcol = lp->col_end[i];
-		lp->col_end[i] = elmnr;
-	}    
-  
-	memcpy (lp->mat, newmat, lp->non_zeros * sizeof (matrec));
- 
-	g_free (newmat);
-	g_free (addtoo);
-
-	for (i = lp->sum; i > lp->rows; i--) {
-	        lp->orig_upbo[i]   = lp->orig_upbo[i - 1];
-		lp->orig_lowbo[i]  = lp->orig_lowbo[i - 1];
-		lp->basis[i]       = lp->basis[i - 1];
-		lp->lower[i]       = lp->lower[i - 1];
-		lp->must_be_int[i] = lp->must_be_int[i - 1];
-	}
-
-	/* changed from i <= lp->rows to i < lp->rows, MB */
-	for (i = 1 ; i < lp->rows; i++)
-	        if (lp->bas[i] >= lp->rows)
-		        lp->bas[i]++;
-
-	if (constr_type == SolverLE || constr_type == SolverGE) {
-	        lp->orig_upbo[lp->rows] = lp->infinite;
-	}
-	else if (constr_type == SolverEQ) {
-	        lp->orig_upbo[lp->rows] = 0;
-	}
-	else {
-	        fprintf (stderr, "Wrong constraint type\n");
-		exit (EXIT_FAILURE);
-	}
-
-	lp->orig_lowbo[lp->rows] = 0;
-
-	if (constr_type == SolverGE && rh != 0)
-	        lp->orig_rh[lp->rows] = -rh;
-	else
-	        lp->orig_rh[lp->rows] = rh;  
-
-	lp->row_end_valid = FALSE;
- 
-	lp->bas[lp->rows] = lp->rows;
-	lp->basis[lp->rows] = TRUE;
-	lp->lower[lp->rows] = TRUE;   
-	lp->eta_valid = FALSE;
-}
-
 static void
 add_lag_con (lprec *lp, gnum_float *row, SolverConstraintType con_type,
 	     gnum_float rhs)
@@ -582,48 +472,6 @@ set_rh (lprec *lp, int row, gnum_float value)
 		        lp->orig_rh[row] = value;
 	lp->eta_valid = FALSE;
 } 
-
-void
-set_rh_vec (lprec *lp, gnum_float *rh)
-{
-        int i;
-	if (lp->scaling_used) {
-	        for (i = 1; i <= lp->rows; i++)
-		        if (lp->ch_sign[i])
-			        lp->orig_rh[i] = -rh[i]*lp->scale[i];
-			else
-			        lp->orig_rh[i] = rh[i]*lp->scale[i];
-	}
-	else
-	        for (i = 1; i <= lp->rows; i++)
-		        if (lp->ch_sign[i])
-			        lp->orig_rh[i] = -rh[i];
-			else
-			        lp->orig_rh[i] = rh[i];
-	lp->eta_valid = FALSE;
-}
-
-void
-str_set_rh_vec (lprec *lp, char *rh_string)
-{
-        int        i;
-	gnum_float *newrh;
-	char       *p, *newp;
-
-	newrh = g_new (gnum_float, lp->rows + 1);
-	p = rh_string;
- 
-	for (i = 1; i <= lp->rows; i++) {
-	        newrh[i] = strtognum (p, &newp);
-		if (p == newp)
-		        g_print ("Bad string in str_set_rh_vec");
-		else
-		        p = newp; 
-	}
-	set_rh_vec (lp, newrh);
-	g_free (newrh);
-}
-
 
 void
 lpkit_set_maxim (lprec *lp)
