@@ -1,3 +1,9 @@
+2002-03-11  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>
+
+	* lpkit.c (set_rh_vec): Removed.
+	(str_set_rh_vec): Removed.
+	(lp_solve_add_constraint): Removed.
+
 2002-03-10  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.1
